--- a/1902.01989/NoetherCenturyV2-2.tex
+++ b/1902.01989/NoetherCenturyV2-2.tex
@@ -69,7 +69,7 @@ In the summer of 1918, Emmy Noether published the theorem that now bears her nam
 
 %\printclassoptions
 
-\newthought{On the twenty-sixth of July in 1918,} Felix Klein gave a presentation to the Royal Academy of Sciences in G\"ttingen$\,$\footnote{Felix Klein is known to popular scientific culture for his conception of the Klein surface (\emph{Fläche})---mistranslated as the Klein bottle (\emph{Flasche}).}. The paper he read had been dedicated to him on the occasion of his Golden Doctorate, the fiftieth anniversary of his Ph.D., by a young colleague named Emmy Noether. The centennial of this paper$\,$\cite{Noether:1918zz,Noether2011}, which contains two theorems that have had an extraordinary impact on physics, including particle physics, for a hundred years, provides the occasion for this commemoration.
+\newthought{On the twenty-sixth of July in 1918,} Felix Klein gave a presentation to the Royal Academy of Sciences in G\"ottingen$\,$\footnote{Felix Klein is known to popular scientific culture for his conception of the Klein surface (\emph{Fläche})---mistranslated as the Klein bottle (\emph{Flasche}).}. The paper he read had been dedicated to him on the occasion of his Golden Doctorate, the fiftieth anniversary of his Ph.D., by a young colleague named Emmy Noether. The centennial of this paper$\,$\cite{Noether:1918zz,Noether2011}, which contains two theorems that have had an extraordinary impact on physics, including particle physics, for a hundred years, provides the occasion for this commemoration.
 
 It was a busy week in G\"ottingen, and especially for Felix Klein. Not only was he celebrating his \emph{Doktorjubil\"aum}, he had given a paper$\,$\cite{Klein1918} of his own the week before explaining how he and David Hilbert were coming to terms with the idea of energy conservation in Einstein's General Theory of Relativity. They were puzzling over an observation that within the General Theory, what normally is a constraint of energy conservation appears as an identity. How then could it constrain anything? This was the problem on which he had asked Emmy Noether's help. Hilbert is revered among mathematicians for the twenty-three problems$\,$\cite{HilbertProbs} he posed in 1900 and known to physicists for the Courant--Hilbert tomes on methods of mathematical physics.
 
@@ -138,7 +138,7 @@ On the way, Noether's analysis clarified Klein and Hilbert's issue about energy 
 
 %\textcolor{red}{Point to \hyperref[app:solitons]{Appendix A on Solitons}!}
 
-\newthought{The person who gave us these theorems} was Amalie Emmy Noether. She was called by her middle name because both her mother and her grandmother were also named Amalie. She was born on March 23, 1882 in Erlangen, a university town a bit north of N\"urnberg. At the time of her birth, the population was about fifteen thousand. The most famous son of Erlangen was Georg Simon Ohm, the $V=IR$ lawgiver, who was not only born in Erlangen but also earned his Ph.D. there. Emmy's father, Max Noether$\,$\cite{MaxLebenWerk}, was a Professor of Mathematics at the University of Erlangen from 1875. That surely influenced her development. He did algebraic geometry, the study of curves on surfaces. Max was a scholar of some distinction, elected to the Academies of Berlin, G\"ttingen, Munich, Budapest, Copenhagen, Turin, Accademia dei Lincei, Institut de France, and the London Mathematical Society.
+\newthought{The person who gave us these theorems} was Amalie Emmy Noether. She was called by her middle name because both her mother and her grandmother were also named Amalie. She was born on March 23, 1882 in Erlangen, a university town a bit north of N\"urnberg. At the time of her birth, the population was about fifteen thousand. The most famous son of Erlangen was Georg Simon Ohm, the $V=IR$ lawgiver, who was not only born in Erlangen but also earned his Ph.D. there. Emmy's father, Max Noether$\,$\cite{MaxLebenWerk}, was a Professor of Mathematics at the University of Erlangen from 1875. That surely influenced her development. He did algebraic geometry, the study of curves on surfaces. Max was a scholar of some distinction, elected to the Academies of Berlin, G\"ottingen, Munich, Budapest, Copenhagen, Turin, Accademia dei Lincei, Institut de France, and the London Mathematical Society.
 
 Felix Klein, whom we have already met as the person who delivered Noether's Theorems, passed through Erlangen for three years, and he had put it on the mathematical map. In his Inaugural Address (1872), he set out a research plan to study geometry from the perspective of group theory. Until that time, the basis of geometry had been to start out with rectilinear coordinate systems. Klein's innovation, with Riemann in the air, was that you shouldn't be tied to a coordinate system, or to a Euclidean space, as we would say today. Instead, it should be the symmetries of the objects that you are talking about---the group structure, and not just the $x$, $y$, and $z$ coordinates. Klein then moved on to a series of other positions, but he had left his mark with the ``Erlangen Program,''$\,$\cite[-57pt]{10.5749/j.cttttp0k.9} so the university was known to be a place that was serious about mathematics.
 
@@ -169,24 +169,24 @@ She was able to present these credentials in her October 1900 petition to attend
 
 In 1903, she passed the university qualification, but she still couldn't be admitted to the University of Erlangen. (Perhaps her father, the Dean, hadn't moved fast enough.) The University of G\"ottingen was a little bit more open-minded. She went there for a semester, during which she heard lectures by Karl Schwarzschild, Hermann Minkowski, Felix Klein, and David Hilbert. I think if you do that in your first semester of university, you're either converted---or you're history! Emmy Noether was converted---and she would make history. After one semester, Erlangen saw the error of its ways and began admitting women, precisely two out of a class of about a thousand, and so she was able to enroll at the University of Erlangen as a student of mathematics.
 
-She wrote her dissertation in 1907 under the direction of Gordan, whom she had known throughout her childhood. Emmy Noether received her D. Phil. \emph{summa cum laude} for ``Über die Bildung des Formensystems der ternären biquadratischen Form'' (On the construction of the system of forms of a ternary quartic form). The work involved the meticulous computation of some 331 invariants of quartic forms---a very Gordanian undertaking. She later described her thesis topic as \emph{Mist} (dung), hardly an expression of pride, because she aspired to invent, not merely to compute. It appears that Noether was the second woman Ph.D. in mathematics in Europe, following Sofia Kovalevskaya who received her degree in G\"ttingen in 1874, with Karl Weierstra\ss, rose to full professor at Stockholm 1889, and died aged forty-one in 1891.
+She wrote her dissertation in 1907 under the direction of Gordan, whom she had known throughout her childhood. Emmy Noether received her D. Phil. \emph{summa cum laude} for ``Über die Bildung des Formensystems der ternären biquadratischen Form'' (On the construction of the system of forms of a ternary quartic form). The work involved the meticulous computation of some 331 invariants of quartic forms---a very Gordanian undertaking. She later described her thesis topic as \emph{Mist} (dung), hardly an expression of pride, because she aspired to invent, not merely to compute. It appears that Noether was the second woman Ph.D. in mathematics in Europe, following Sofia Kovalevskaya who received her degree in G\"ottingen in 1874, with Karl Weierstra\ss, rose to full professor at Stockholm 1889, and died aged forty-one in 1891.
 
 \emph{Dr.} Emmy Noether remained in her home town as an unpaid member of the Erlangen Mathematical Institute from 1908 to 1915. She got a lot of experience in teaching and research. When her father's health began to fail, she took over his classes. She was conducting herself as a faculty member, though without either compensation or status. She became a member of the German Mathematical Society (\emph{Deutsche Mathematiker-Vereinigung}) in 1909, and in the same year became the first woman to lecture at the Society's annual meeting. The department added new faculty members, and she came under the influence of Ernst Fischer$\,$\cite{ernstfischer}---Paul Gordan's successor---who gave her an entry into the world of abstract mathematics, rather than mere computation. It was for abstract mathematics that she turned out to have an enormous talent.
 
-\newthought{In 1915, she was invited to G\"ttingen} by Klein and Hilbert. G\"ttingen was the Mount Olympus$\,$\footnote{Benno Artmann,
+\newthought{In 1915, she was invited to G\"ottingen} by Klein and Hilbert. G\"ottingen was the Mount Olympus$\,$\footnote{Benno Artmann,
 ``Hochburg der Mathematik,'' in \emph{Georgia Augusta} (2008) \url{http://bit.ly/2GQmQZL}, pp.~14--23.} of mathematics, at least in Germany. It was  where Carl Friedrich Gau\ss\ had held court. If you look at the list of heroes on their history page, you will find many familiar names: Carathéodory, Clebsch, Richard Courant, Dirichlet, Herglotz, Kästner, Minkowski, Carl Runge, and  Hermann Weyl, among others. It was a great place to be a young person in mathematics.
 
-G\"ttingen's proud tradition in mathematics includes an unequalled trove of information about the early history of modern (eighteenth and nineteenth century) mathematics. A locked \emph{Giftschrank} (poison cabinet) in the math library holds treasures including notes$\,$\footnote[][-15pt]{Felix Klein, \emph{Seminar-Protokolle,} \url{http://www.claymath.org/publications/klein-protokolle}. For a brief tour, see Eugene Chislenko and Yuri Tschinkel, ``The Felix Klein Protocols,'' Notices Amer. Math. Soc. \textbf{54}, 961--970 (2007), \url{http://www.ams.org/notices/200708/tx070800960p.pdf}.} of forty years of seminar lectures by Felix Klein, his colleagues and students, and distinguished visitors---eight thousand pages in twenty-nine volumes!
+G\"ottingen's proud tradition in mathematics includes an unequalled trove of information about the early history of modern (eighteenth and nineteenth century) mathematics. A locked \emph{Giftschrank} (poison cabinet) in the math library holds treasures including notes$\,$\footnote[][-15pt]{Felix Klein, \emph{Seminar-Protokolle,} \url{http://www.claymath.org/publications/klein-protokolle}. For a brief tour, see Eugene Chislenko and Yuri Tschinkel, ``The Felix Klein Protocols,'' Notices Amer. Math. Soc. \textbf{54}, 961--970 (2007), \url{http://www.ams.org/notices/200708/tx070800960p.pdf}.} of forty years of seminar lectures by Felix Klein, his colleagues and students, and distinguished visitors---eight thousand pages in twenty-nine volumes!
 
 %Partly because Hilbert and Klein had noticed what Emmy Noether could do, and thought that she could help them resolve some problems,
 Hilbert took a very keen interest in Emmy Noether, and worked to advance her career.
-The Mathematics and Science Department of the Philosophical Faculty put her forward in 1915 for the \emph{Habilitation} lecture to become Privatdozent in G\"ttingen, with unanimous---if somewhat old-school---support. One endorsement came from G\"ttingen mathematician Edmund Landau$\,$\cite{Schappa}:
+The Mathematics and Science Department of the Philosophical Faculty put her forward in 1915 for the \emph{Habilitation} lecture to become Privatdozent in G\"ottingen, with unanimous---if somewhat old-school---support. One endorsement came from G\"ottingen mathematician Edmund Landau$\,$\cite{Schappa}:
 \begin{quote}
 I have had up to now uniformly unsatisfactory experiences with female students and I hold that the female brain is unsuited to mathematical production. Miss Noether seems to be a rare exception.
 \end{quote}
 However, in a special vote against the \emph{Habilitation} of Emmy Noether, 19 November 1915, the Historical-Philological Department blocked the move, out of ``concern that seeing a female organism might be distracting to the students.''$\,$\footnote{For the full German text, see Cordula Tollmien, ``Weibliches Genie: Frau und Mathematiker: Emmy Noether,'' in \emph{Georgia Augusta} (2008) \url{http://bit.ly/2GQmQZL}, pp.~38--44.}
 
-%\textcolor{red}{David Hilbert sought to bring her into the mathematics department at the University of G\"ttingen in 1915, but other faculty objected. ``What will our soldiers think when they return to the university and find that they are required to learn at the feet of a woman?'' one professor complained. Hilbert was indignant. ``I do not see that the sex of the candidate is an argument against her admission,? he retorted. ?We are a university, not a bath house.'' Instead, Noether lectured there unofficially under Hilbert?s name for the next four years without pay; her family provided living expenses.  One faculty member protested: "What will our soldiers think when they return to the university and find that they are required to learn at the feet of a woman?"
+%\textcolor{red}{David Hilbert sought to bring her into the mathematics department at the University of G\"ottingen in 1915, but other faculty objected. ``What will our soldiers think when they return to the university and find that they are required to learn at the feet of a woman?'' one professor complained. Hilbert was indignant. ``I do not see that the sex of the candidate is an argument against her admission,? he retorted. ?We are a university, not a bath house.'' Instead, Noether lectured there unofficially under Hilbert?s name for the next four years without pay; her family provided living expenses.  One faculty member protested: "What will our soldiers think when they return to the university and find that they are required to learn at the feet of a woman?"
 %David Hilbert responded with indignation, stating, "I do not see that the sex of the candidate is an argument against her admission as privatdozent. After all, we are a university, not a bath house."}
 
 The \emph{Habilitation} was not formally refused by the university; the administration simply never took action.
@@ -195,7 +195,7 @@ Accordingly, the \emph{Habilitation} was not granted. But with Hilbert as her pa
 The G\"ottingen mathematicians pressed her case again in 1917, this time with new urgency: the fear that she would be hired away to Frankfurt if G\"ottingen did not go ahead. They applied to the Ministry to make an exception, to save this talent that was indispensable to G\"ottingen. The reply from the Ministry of Education$\,$\footnote{Letter from the Ministry of Education, the Edelstein Collection, the National Library of Israel, \url{http://bit.ly/2BFZHDs}. English translation at \url{https://blog.nli.org.il/en/noether/}.} exhibits unimpeachable bureaucratic logic.\vspace*{-6pt}
 \begin{quotation}
 \phantom{M}\hfill Berlin, July 20, 1917\phantom{MMM}\break
-With regard to accepting women to teaching positions, the regulations of Frankfurt University are identical to those of all the universities: women are not allowed to be appointed to positions of external lecturers. It is completely impossible to make an exception to the rule in one university. Therefore, your concern that Miss Noether will leave, move to Frankfurt and receive a position there is completely unfounded: she will not be given the right to teach there, just as she will not receive such a thing in G\"ttingen or in any other university. The Minister of Education has expressed this time and time again and emphasized that he supports his predecessor's instructions, and therefore women will not be permitted to receive teaching positions in universities.\\[6pt]
+With regard to accepting women to teaching positions, the regulations of Frankfurt University are identical to those of all the universities: women are not allowed to be appointed to positions of external lecturers. It is completely impossible to make an exception to the rule in one university. Therefore, your concern that Miss Noether will leave, move to Frankfurt and receive a position there is completely unfounded: she will not be given the right to teach there, just as she will not receive such a thing in G\"ottingen or in any other university. The Minister of Education has expressed this time and time again and emphasized that he supports his predecessor's instructions, and therefore women will not be permitted to receive teaching positions in universities.\\[6pt]
 \noindent Therefore, there is no concern that you will lose Miss Noether as an external lecturer in Frankfurt University.
 \end{quotation}
 
@@ -255,7 +255,7 @@ The order to take a leave of absence was an ominous development, and the implica
 
 In September came a communication in the form of a telegram$\,$\footnote{Several interesting documents from the Edelstein Collection in the National Library of Israel appear in \bibentry{ENNatLibIsrael}.} from the Prussian Ministry of Science, Art, and Education in Berlin saying that on the basis of \S3 of the Law for the Restoration of the Professional Civil Service of April 1933, Emmy Noether's teaching permit was nullified. The university was instructed that her wages, such as they were, were to cease by the end of the month.
 
-Sympathetic colleagues, Hilbert among them, had to scramble to find landing places for Emmy Noether and many others---by the end of 1933 eighteen mathematicians left or were driven out from the faculty at the Mathematical Institute in G\"ttingen alone.
+Sympathetic colleagues, Hilbert among them, had to scramble to find landing places for Emmy Noether and many others---by the end of 1933 eighteen mathematicians left or were driven out from the faculty at the Mathematical Institute in G\"ottingen alone.
 %\textcolor{blue}{\url{https://www.ushmm.org/learn/timeline-of-events/1933-1938/book-burning}: %On May 10, 1933, university students burn upwards of 25,000 ?un-German? books in Berlin?s Opera Square. Some 40,000 people gather to hear Joseph Goebbels deliver a fiery address: ?No to decadence and moral corruption!?
 %As part of an effort to align German arts and culture with Nazi ideas (Gleichschaltung), university students in college towns across Germany burned thousands of books they considered to be ?un-German,? heralding an era of state censorship and cultural control. Students threw books pillaged mostly from public and university libraries onto bonfires with great ceremony, band-playing, and so-called ?fire oaths.? The students sought to purify German literature of ?foreign,? especially Jewish, and other immoral influences. Among the authors whose works were burned was Helen Keller, an American whose belief in social justice encouraged her to champion disabled persons, pacifism, improved conditions for industrial workers, and women's voting rights.}
  %\textcolor{blue}{The committee pledged to assist German scholars, who had been dismissed because of their politics or religion, in finding academic employment in the U.S.}
@@ -279,7 +279,7 @@ At Bryn Mawr, her ashes were interred under the walk in the cloisters, beneath  
 
 Speaking at her memorial service at Bryn Mawr, Hermann Weyl gave a very long, and very detailed, hymn of praise$\,$\footnote{Reprinted in \hyperref[auguste]{Auguste Dick's \emph{Emmy Noether, 1882-1935}, pp. 112--152}.}.
 \begin{quote}
-I have a vivid recollection of her when I was in G\"ttingen as visiting professor in the winter semester of 1926-1927, and lectured on representations of continuous groups. She was in the audience; for just at that time the hypercomplex number systems and their representations had caught her interest and I remember many discussions when I walked home after the lectures, with her and von Neumann, who was in G\"ttingen as a Rockefeller Fellow, through the cold, dirty, rain-wet streets of G\"ottingen. When I was called permanently to G\"ottingen in 1930, I earnestly tried to obtain from the Ministerium a better position for her, because I was ashamed to occupy such a preferred position beside her whom I knew to be my superior as a mathematician in many respects.
+I have a vivid recollection of her when I was in G\"ottingen as visiting professor in the winter semester of 1926-1927, and lectured on representations of continuous groups. She was in the audience; for just at that time the hypercomplex number systems and their representations had caught her interest and I remember many discussions when I walked home after the lectures, with her and von Neumann, who was in G\"ottingen as a Rockefeller Fellow, through the cold, dirty, rain-wet streets of G\"ottingen. When I was called permanently to G\"ottingen in 1930, I earnestly tried to obtain from the Ministerium a better position for her, because I was ashamed to occupy such a preferred position beside her whom I knew to be my superior as a mathematician in many respects.
 \end{quote}
 
 Pavel Alexandrov in Moscow was one of Emmy Noether's closest friends. Part of her fascination with the Russian school of mathematics was channeled through him. He writes very respectfully and lovingly about what a wonderful person she was, how generous to her students$\,$\footnote{Reprinted in \hyperref[auguste]{Auguste Dick's \emph{Emmy Noether, 1882-1935}, pp. 153--179}.}. Apparently she would throw out ideas, elaborate programs, let her students carry them out, see that her students would write them up and get credit for them.
