--- a/2007.00785/2007.00785-psu.tex
+++ b/2007.00785/2007.00785-psu.tex
@@ -2,7 +2,7 @@
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl,sc]{mathpazo}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
+\usepackage[papersize={7.2in, 10.0in}, left=.5in, right=.5in, top=.7in, bottom=.9in]{geometry}
 \linespread{1.05}
 \sloppy
 \raggedbottom
@@ -1608,10 +1608,11 @@ In this appendix we sketch the proof of Propostion \ref{prop:characterization_co
 
 \begin{proof}
 	Since a density matrix $\rho$ is a convex combination of pure states (corresponding to rank-one orthogonal projections of $\mathcal{H}$), it suffices to prove this proposition for pure states, $\rho_{\Psi} := \vert \Psi \rangle \langle \Psi \vert$, where $\Psi$ is a unit vector in $\mathcal{H}$. Then, in the state $\rho_{\Psi}$, the probability density, $f$, of $\xi$ with respect to the Lebesgue measure, $\d^{d}\xi$, is given by
-	\begin{align*}
-	f(\xi)=&\gamma^{-\frac32d}\det(2\Im W)^{\frac12}\times\\
-	&\int_{(\mathbb R^d)^3} \e^{\i \pi^t(x-y)} \exp(\frac\i2(x-\xi)^tW(x-\xi) -\frac\i2(y-\xi)^tW^*(y-\xi))\overline{\Psi(x)}\Psi(y)\ \d^{d}\pi \d^{d} x \d^{d} y
-	\end{align*}
+	\begin{multline*}
+	f(\xi)=\gamma^{-\frac32d}\det(2\Im W)^{\frac12}\times\\
+	\int_{(\mathbb R^d)^3} \e^{\i \pi^t(x-y)} \exp(\frac\i2(x-\xi)^tW(x-\xi) - \\
+	\frac\i2(y-\xi)^tW^*(y-\xi))\overline{\Psi(x)}\Psi(y)\ \d^{d}\pi \d^{d} x \d^{d} y
+	\end{multline*}
 	where $\gamma$ is a constant equal to $2\pi$. Setting $u=\frac12(x+y)$ and $v=\frac12(x-y)$, we find that
 	\begin{align*}
 	f(\xi)=&2^d\gamma^{-\frac32d}\det(2\Im W)^{\frac12}\times\\
@@ -1645,8 +1646,8 @@ In this appendix we sketch the proof of Propostion \ref{prop:characterization_co
 	Integrating over $v$, one arrives at 
 
 	\begin{align*}
-	g(\pi)=&\gamma^{-\frac d2}\det(2\Im W +2\Re W(\Im W)^{-1}\Re W)^{\frac12}\times\\
-	&\int_{\mathbb R^d}\e^{-(\pi-p)^t( {2}\Im W+
+	g(\pi)&=\gamma^{-\frac d2}\det(2\Im W +2\Re W(\Im W)^{-1}\Re W)^{\frac12}\times\\
+	&\quad\int_{\mathbb R^d}\e^{-(\pi-p)^t( {2}\Im W+
 	{2}\Re W(\Im W)^{-1}\Re W)^{-1}(\pi-p)}|\widehat{\Psi}(p)|^2\d^{d} p.
 	\end{align*}
 	In this expression, we recognize the convolution between the spectral measure of $\mathbf P$ in the state $\Psi$ and the appropriate Gaussian density. This completes the proof of the proposition.
@@ -1708,7 +1709,7 @@ Using the equation above and the Jordan normal form of $T$, we obtain the desire
 
 	
 
-\begin{thebibliography}{References}
+\begin{thebibliography}{99}
 
 \bibitem{Gamow} George Gamow, ``Zur Quantentheorie des Atomkerns'', Physikalische Zeitschrift {\bf{51}}, 204 (1928)
 
