--- a/gr-qc-0010055/bh-evaporation-notes.tex
+++ b/gr-qc-0010055/bh-evaporation-notes.tex
@@ -412,7 +412,7 @@ renormalizing the theory to deal with infinities. Quantum operators will be
 assumed to be
 ``normal ordered", so that their matrix elements are finite.  Complete
 treatments of
-quantum field theory in curved spacetime can be found in \cite{parker, bad}.
+quantum field theory in curved spacetime can be found in \cite{bad, parker}.
 
 One standard way to implement canonical quantization is the following.
 Choose a complete basis $\f$ of solutions to the scalar wave equation
