misc things that bug me

--- a/gr-qc-0010055/bh-evaporation-notes.tex
+++ b/gr-qc-0010055/bh-evaporation-notes.tex
@@ -604,7 +604,7 @@ where $u=T-\xi , v=T+\xi$.  The Rindler metric (\ref{rinmetric}) is just a
 coordinate
 transformation of (\ref{flat}), with
 %
-\be\label{rincoord}v= {1\over a}ln\vb, \qquad  u=-{1\over a}ln (-\ub).\ee
+\be\label{rincoord}v= {1\over a}\log\vb, \qquad  u=-{1\over a}\log (-\ub).\ee
 %
 A Rindler observer at constant spatial coordinate $\xi$ undergoes
 constant acceleration with magnitude $ae^{ -a\xi }$, and the observer's proper
@@ -776,7 +776,7 @@ so that
 %
 \bena\label{rinalp}\alp &=& {-1\over 4\pi \sqrt{\omega \omega '}}
 \int_{-\infty}^0 d\ub (\omega ' -{\omega \over a\ub } ) e^{i\omega ' \ub}
-e ^{i {\omega \over a} ln(-\ub )} \\
+e ^{i {\omega \over a} \log(-\ub )} \\
 &=&{i\over 2\pi }{1\over \sqrt{\omega ' \omega }}
 (i\omega ' )^{-i {\omega \over a}}\Gamma (1 +i {\omega \over a} ), \eena
 %
@@ -872,7 +872,7 @@ coordinates are
 given by
 %
 \bena\label{coordtrans}
- dr^* &=& {dr\over V(r) },\quad r^*=r +2M ln ({r\over 2M}-1) \\
+ dr^* &=& {dr\over V(r) },\quad r^*=r +2M \log ({r\over 2M}-1) \\
 u &= &t-r^* ,\quad v=t+r^* \\
 U &= &-e^{-u/4M} ,\quad  V=e^{v/4M} ,\eena
 %
@@ -1187,13 +1187,15 @@ on $\pinf\!$.
 Equation (\ref{changev}) is the desired relation between $u$ and $v$.
 For a solution to the scalar wave equation $\nabla _a \nabla ^a \phi =0$ that
 has the boundary condition $\phi\sim e^{-i\omega u}$ at $\finf\!$, we have
-on $\pinf$
+on $\pinf$:
 %
-\bena\label{inwave}
-\phi &\sim &
-e^{i{\omega \over\kappa}ln ({v_0 -v \over C^2})},\qquad    v<v_0 \\
-\phi &\sim & 0,\qquad\qquad\qquad\   v>v_0 .
-\eena
+\begin{equation}
+\label{inwave}
+\phi \sim \begin{cases}
+\quad \exp\bigl ( {i{\omega \over\kappa}\log ({v_{\scriptsize 0} -v \over C^2})}\bigr) & (v<v_0) \\
+\quad 0 & (v>v_0)\\
+\end{cases}
+\end{equation}
 %
 The wave vanishes for $v>v_0$ because it would have had to come out
 of the black hole horizon to reach this part of $\pinf\!$.  Proceeding as
@@ -1204,7 +1206,7 @@ the expressions for the Bogolyubov coefficients
 2\pi\sqrt{\omega\omega^\prime}}
 \int_{-\infty}^0 dv \left(\omega ' -{\omega \over \kappa v }\right)
 e^{i\omega ' v}
-e ^{i {\omega \over \kappa} ln( -v  )}  \\
+e ^{i {\omega \over \kappa} \log( -v  )}  \\
 &= &{1\over i\pi \sqrt{\omega \omega '}}
 (i\omega ' )^{-i {\omega \over \kappa}}\Gamma (1 +i {\omega \over \kappa} ) \\
 \bet &=&-i\alpha _{\omega ,-\omega '},\eena
