misc things that bug me

--- a/gr-qc-0010055/bh-evaporation-notes.tex
+++ b/gr-qc-0010055/bh-evaporation-notes.tex
@@ -1261,7 +1261,7 @@ radiates with  temperature $T=\hbar {\kappa\over 2\pi}$, and has an entropy
 \be\label{bhentropy} S_{bh}= {1\over 4} A!\ee
 %
 
-\vskip 0.1in\noindent
+\vskip 0.1in\noindent\goodbreak
 {\it Generality and Back Reaction }
 \vskip 0.05in
 
