--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2024-08-02 09:16:17 -0400 
+%% Created for Pete Su at 2024-08-04 07:39:53 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Page2005,
+	author = {Page, Don N},
+	date-added = {2024-08-04 07:37:26 -0400},
+	date-modified = {2024-08-04 07:39:53 -0400},
+	doi = {10.1088/1367-2630/7/1/203},
+	issn = {1367-2630},
+	journal = {New J. Phys.},
+	note = {\href{http://arxiv.org/abs/hep-th/0409024v3}{arxiv:hep-th/0409024v3}},
+	pages = {203},
+	publisher = {IOP Publishing},
+	title = {Hawking radiation and black hole thermodynamics},
+	url = {http://dx.doi.org/10.1088/1367-2630/7/1/203},
+	volume = {7},
+	year = {2005},
+	bdsk-url-1 = {http://dx.doi.org/10.1088/1367-2630/7/1/203}}
 
 @article{Hawking2005,
 	author = {Hawking, S. W.},
