--- a/hep-th-0409024/hep-th-0409024-psu.tex
+++ b/hep-th-0409024/hep-th-0409024-psu.tex
@@ -1,11 +1,57 @@
 %This paper is in pure LaTeX.
 %\documentstyle[12pt]{article}
-\documentclass[12pt]{article} \usepackage{latexsym} \textwidth 15cm
-\textheight 22cm \topmargin -10mm
+\documentclass[12pt]{article} \usepackage{latexsym} 
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{/Users/psu/arxiv-psu/helpers/cmrsum}
+\input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 \begin{document}
 
-\title{{\bf HAWKING RADIATION AND \\ BLACK HOLE THERMODYNAMICS}
+\title{{\bf Hawking Radiation and \\ Black Hole Thermodynamics}
 \thanks{Alberta-Thy-18-04, hep-th/0409024, review article solicited for
 a celebratory Focus Issue on Relativity, ``Spacetime 100 Years
 Later,'' to be published in New Journal of Physics.}}
@@ -19,15 +65,11 @@ Institute for Theoretical Physics\\
 Department of Physics, University of Alberta\\
 Edmonton, Alberta, Canada T6G 2J1
 }
-\date{(2004 September 3; additional section added 2004 December 31
-\thanks{On this date the author reached an age which is an integer
-divisor of the number of references.}\ )}
+\date{31 Dec 2004\thanks{On this date the author reached an age which is an integer
+divisor of the number of references.}}
 \maketitle
-\large
 
 \begin{abstract}
-
-\baselineskip 18 pt
 
 An inexhaustive review of Hawking radiation and black hole
 thermodynamics is given, focusing especially upon some of the
@@ -37,7 +79,6 @@ in the field on and off for the past thirty years.
 \end{abstract}
 \normalsize
 
-\baselineskip 18 pt
 \newpage
 
 \section{Historical Background}
@@ -547,26 +588,20 @@ From the mean number $N_{j\omega lmp}$ and the entropy $S_{j\omega
 lmp}$ per mode, one can sum and integrate over modes to get the emission
 rates of energy, angular momentum (the component parallel to the black
 hole spin axis), charge, and entropy by the black hole:
- \begin{equation}
- {dE_{\mathrm{rad}}\over dt} = -{dM\over dt}
+ \begin{align}
+ {dE_{\mathrm{rad}}\over dt} &= -{dM\over dt}
  = {1\over 2\pi}\sum_{j,l,m,p}\int \omega N_{j\omega lmp} d\omega,
- \label{eq:9}
- \end{equation}
- \begin{equation}
- {dJ_{\mathrm{rad}}\over dt} = -{dJ\over dt}
+ \label{eq:9}\\
+ {dJ_{\mathrm{rad}}\over dt} &= -{dJ\over dt}
  = {1\over 2\pi}\sum_{j,l,m,p}\int m N_{j\omega lmp} d\omega,
- \label{eq:10}
- \end{equation}
- \begin{equation}
- {dQ_{\mathrm{rad}}\over dt} = -{dQ\over dt}
+ \label{eq:10}\\
+ {dQ_{\mathrm{rad}}\over dt} &= -{dQ\over dt}
  = {1\over 2\pi}\sum_{j,l,m,p}\int q_j N_{j\omega lmp} d\omega,
- \label{eq:11}
- \end{equation}
- \begin{equation}
+ \label{eq:11}\\
  {dS_{\mathrm{rad}}\over dt}
- = {1\over 2\pi}\sum_{j,l,m,p}\int S_{j\omega lmp} d\omega.
+ &= {1\over 2\pi}\sum_{j,l,m,p}\int S_{j\omega lmp} d\omega.
  \label{eq:12}
- \end{equation}
+ \end{align}
 Here $M$, $J$, and $Q$ (without subscripts) denote the black hole's
 energy, angular momentum, and charge.  By the conservation of the
 total energy, angular momentum, and charge, the black hole loses these
@@ -597,21 +632,17 @@ For the emission of $n_s$ species of two-polarization massless
 particles of spin $s$ from a Schwarzschild black hole
 (nonrotating and uncharged) into empty space, numerical calculations
 \cite{Page76,Page76b,Page83} gave
- \begin{equation}
- {dE_{\mathrm{rad}}\over dt} = -{dM\over dt}
+ \begin{align}
+ {dE_{\mathrm{rad}}\over dt} &= -{dM\over dt}
  = 10^{-5} M^{-2}(8.1830 n_{1/2} + 3.3638 n_1 + 0.3836 n_2),
- \label{eq:15}
- \end{equation}
- \begin{equation}
+ \label{eq:15}\\
  {dS_{\mathrm{rad}}\over dt}
- = 10^{-3} M^{-1}(3.3710 n_{1/2} + 1.2684 n_1 + 0.1300 n_2),
- \label{eq:16}
- \end{equation}
- \begin{equation}
+ & = 10^{-3} M^{-1}(3.3710 n_{1/2} + 1.2684 n_1 + 0.1300 n_2),
+ \label{eq:16}\\
  {dS_{\mathrm{bh}}\over dt}
- = - 10^{-3} M^{-1}(2.0566 n_{1/2} + 0.8454 n_1 + 0.0964 n_2).
+ &= - 10^{-3} M^{-1}(2.0566 n_{1/2} + 0.8454 n_1 + 0.0964 n_2).
  \label{eq:17}
- \end{equation}
+ \end{align}
 
 Therefore, if a Schwarzschild black hole emitted just massless
 neutrinos into empty space, the entropy in the radiation would be
@@ -1432,26 +1463,30 @@ be needed for $N(E)$ to be an integer, then
  \end{equation}
 whereas for $c\alpha E^{\alpha-1} \Delta \ll 1$ so that
 $N(E+\Delta)-N(E-\Delta) \ll N(E-\Delta)$, one gets
- \begin{eqnarray}
- S' &\equiv& S'_{\mathrm{microcanonical}}(E)
-    = \ln{[N(E+\Delta)-N(E-\Delta)]} \nonumber \\
-    &\approx& \ln{[e^{cE^\alpha}(e^{c\alpha E^{\alpha-1}\Delta}
+ \begin{equation}
+ \begin{aligned}
+ S' &\equiv S'_{\mathrm{microcanonical}}(E)
+    = \ln{[N(E+\Delta)-N(E-\Delta)]}  \\
+    &\approx \ln{[e^{cE^\alpha}(e^{c\alpha E^{\alpha-1}\Delta}
                                - e^{-c\alpha E^{\alpha-1}\Delta})]}
     \approx \ln{[e^{cE^\alpha} 2c\alpha E^{\alpha-1} \Delta]}
-    \nonumber \\
-    &=& S + \ln{S} + \ln{(\Delta/E)} + \ln{(2\alpha)}.
+     \\
+    &= S + \ln{S} + \ln{(\Delta/E)} + \ln{(2\alpha)}.
+\end{aligned}
  \label{eq:28}
- \end{eqnarray}
+ \end{equation}
  
 This example shows how logarithms can come in when one goes from one
 coarse graining to another.  Here the coefficient of the logarithm of
 the energy depends on how the width of the range depends on the energy. 
 For example, if we set $\Delta = \beta E^\gamma$, then
  \begin{equation}
- S' = S + (\alpha+\gamma-1)\ln{E} + \ln{(2\alpha\beta c)}
-    = S + {\alpha+\gamma-1 \over \alpha} \ln{S} + \ln{(2\alpha\beta)}
+ \begin{aligned}
+ S' &= S + (\alpha+\gamma-1)\ln{E} + \ln{(2\alpha\beta c)}\\
+    &= S + {\alpha+\gamma-1 \over \alpha} \ln{S} + \ln{(2\alpha\beta)}
         - {\gamma-1\over\alpha} \ln{c}.
- \label{eq:29}
+\end{aligned}
+\label{eq:29}
  \end{equation}
 Thus by choosing $\gamma$ appropriately, one can get any coefficient of
 the logarithm term that one wants.  In this case it would be absent if
@@ -1789,7 +1824,6 @@ the Natural Sciences and Engineering Research Council of Canada.
 
 
 %\newpage
-\baselineskip 4pt
 
 \begin{thebibliography}{99}
 
