--- a/1707.03614/canonical-hawking.tex
+++ b/1707.03614/canonical-hawking.tex
@@ -1,4 +1,4 @@
-\documentclass[aps,twocolumn,showpacs]{revtex4}
+\documentclass[aps,12pt,showpacs]{revtex4-2}
 %\documentclass[aps,onecolumn,showpacs]{revtex4}
 \usepackage{graphicx}
 \usepackage{amsfonts}
@@ -13,7 +13,51 @@
 \usepackage{color}
 %\usepackage{hyperref}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
+% these include amsmath and that can cause trouble in older docs.
+\input{/Users/psu/arxiv-psu/helpers/cmrsum}
+\input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
+
+%\usepackage[small]{titlesec}
+%\titlelabel{\thetitle.\quad}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 \renewcommand*{\l}{\lambda_{\star}}
 \newcommand*{\M}{M_{\star}}
@@ -90,7 +134,7 @@ Mohanpur - 741 246, WB, India }
  
 \pacs{04.62.+v, 04.60.Pp}
 
-\date{\today}
+\date{12 Jul 2017 }
 
 \begin{abstract}
 
@@ -115,6 +159,7 @@ quantization methods such as polymer quantization.
 
 
 
+\newpage
 
 \section{Introduction}
 %
@@ -1251,12 +1296,12 @@ density $\mathcal{H}_{\kr}^{+}$ as
 %
 where 
 %
-$
+$$
 h_{\kr}^1 =  \sum_{k\neq k'} [ 
 \frac{1}{2} F_{1}(k,-\kr) F_{1}(-k',\kr) ~ \tilde{\pi}_{k}  \tilde{\pi}_{-k'} 
 + \frac{1}{2} |\kr|^2 F_{0}(k,-\kr) F_{0}(-k',\kr) ~ 
 \tilde{\phi}_{k} \tilde{\phi}_{-k'} ] ~.
-$
+$$
 %
 Similarly, we can express the diffeomorphism generators of the Fourier modes  
 corresponding to the observer $\observerplus$, as
@@ -1268,11 +1313,11 @@ corresponding to the observer $\observerplus$, as
 %
 where 
 %
-$
+$$
 d_{\kr}^1 =  \sum_{k\neq k'} (-i\kr/2) [  F_{1}(k,-\kr) F_{0}(-k',\kr) ~ 
 \tilde{\pi}_{k}  \tilde{\phi}_{-k'} 
 - F_{1}(-k,\kr) F_{0}(k',-\kr) ~ \tilde{\pi}_{-k} \tilde{\phi}_{k'} ]~.
-$
+$$
 %
 We note that both the terms $h_{\kr}^1$ and $d_{\kr}^1$ are linear in 
 Fourier modes or their conjugate momenta. Therefore, the vacuum expectation 
@@ -1445,10 +1490,10 @@ fellowships.
 
 
 
+\newpage
 
 
-
-\begin{thebibliography}{58}
+\begin{thebibliography}{999}
 \expandafter\ifx\csname natexlab\endcsname\relax\def\natexlab#1{#1}\fi
 \expandafter\ifx\csname bibnamefont\endcsname\relax
   \def\bibnamefont#1{#1}\fi
